# transfer_cvmat_over_socket

./: CMakeLists.txt  README.md
receiver_server_src/: rx.cc
sender_client_src/: tx.cc
